# ScholarSynth

./: .gitignore  Project_api_key.txt  README.md  docker-compose.yml  main.py  model.py  pyproject.toml  query.py  read.py  requirements.txt
Frontend/: index.html  package.json  tailwind.config.js
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/: LandingPage.tsx  SearchPage.tsx
Frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FileUpload.tsx  ProgressSteps.tsx  ThemeToggle.tsx  index.ts
Frontend/src/components/workspace/: ChatPanel.tsx  ContextExplorer.tsx  Sidebar.tsx  Workspace.tsx
Frontend/src/lib/: api.ts  theme.tsx  utils.ts
Frontend/src/types/: index.ts
papercontext/: docker-compose.yml  milvus_client.py  page_extractor.py  pdf_reader.py  text_cleaner.py  writer.py
scholarsynth/: __init__.py  api.py  chunker.py  citations.py  embedder.py  exceptions.py  jobs.py  models.py  page_extractor.py  pdf_reader.py  processing.py  semantic_chunker.py  semantic_search.py  writer.py
scholarsynth/rag/: __init__.py  engine.py  generator.py  milvus_retriever.py  pipeline.py  prompts.py  query_router.py
scholarsynth/retrieval/: retriever.py
scholarsynth/vectorstore/: client.py  constants.py  ingest.py  schema.py
scripts/: wsl-repair.ps1  wsl-setup.sh
tests/: drop_collection.py  inspect_milvus.py  test_chunker.py  test_citations.py  test_page_extractor.py  test_pdf_reader.py  test_pipeline.py  test_query_router.py  test_rag.py  test_retriever.py  test_semantic_chunker.py  test_text_cleaner.py
