[project]
name = "papercontext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.2",
    "logger>=1.4",
    "pandas>=2.3.3",
    "pymilvus>=3.0.0",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "vllm>=0.22.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.8.0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarsynth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

