[project]
name = "papercontext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "langchain>=1.3.2",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai-like>=0.4.0",
    "logger>=1.4",
    "modal>=1.5.0",
    "pandas>=2.3.3",
    "pymilvus>=3.0.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.20",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarsynth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

